# Boon-Engine

./: .gitignore  .gitmodules  BuildProfiles.json  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  LICENSE  README.md  doxygen.txt
Boon/: CMakeLists.txt
Boon/Assets/Resources/: BoonEngine.ico~
Boon/Assets/shaders/: Quad.glsl  Tilemap.glsl
Boon/include/Asset/: Asset.h  AssetLibrary.h  AssetLoader.h  AssetManifest.h  AssetMeta.h  AssetRef.h  AssetRegistry.h  AssetSerializer.h  AssetTraits.h  AssetType.h  Assets.h  MaterialAsset.h  PrefabAsset.h  SceneAsset.h  ShaderAsset.h  SpriteAnimatorSystem.h  SpriteAtlasAsset.h  TextureAsset.h  TilemapAsset.h
Boon/include/BoonDebug/: DebugRenderer.h  Logger.h
Boon/include/Component/: BoxCollider2D.h  CameraComponent.h  ECSLifecycle.h  NameComponent.h  PlayerSpawn.h  Rigidbody2D.h  SceneComponent.h  SpriteAnimatorComponent.h  SpriteRendererComponent.h  TextureRendererComponent.h  TilemapRendererComponent.h  TransformComponent.h  UUIDComponent.h
Boon/include/Core/: AppState.h  AppStateMachine.h  Application.h  Assert.h  BitFlag.h  Boon.h  Command.h  Delegate.h  DynamicLibrary.h  EngineContext.h  FileSystem.h  ISubsystem.h  IWindowEventCallback.h  ObservableType.h  Random.h  ServiceLocator.h  Singleton.h  SubsystemRegistry.h  Time.h  UUID.h  Variant.h  Window.h
Boon/include/Event/: Event.h  EventBus.h  SceneEvents.h  WindowEvents.h
Boon/include/Input/: GamepadCodes.h  Input.h  KeyCodes.h  MouseCodes.h
Boon/include/Module/: ModuleAPI.h  ModuleContext.h  ModuleInstance.h  ModuleLibrary.h  ModuleManifest.h  ModuleManifestLoader.h  StaticModules.h
Boon/include/Networking/: IRepSerializer.h  NetAuthority.h  NetConnection.h  NetDriver.h  NetIdentity.h  NetPacket.h  NetRPC.h  NetRepCore.h  NetRepRegistry.h  NetRigidbody2DSerializer.h  NetScene.h  NetTransform.h  NetworkSettings.h  NetworkingSubsystem.h  ReplicationUtils.h
Boon/include/Physics/: Physics2D.h  Physics2DTypes.h  PhysicsWorld2D.h
Boon/include/Project/: ProjectConfig.h  ProjectLoader.h  RuntimeConfig.h
Boon/include/Reflection/: BClass.h  BClassBase.h  BFunction.h  BProperty.h  ECSLifecycleDetection.h  RegisterBClass.h
Boon/include/Renderer/: Camera.h  Framebuffer.h  IndexBuffer.h  Material.h  MaterialFactory.h  Pipeline.h  QuadMaterialData.h  RenderAPI.h  RenderBatch.h  RenderContext.h  RenderPass.h  RenderQueue2D.h  Renderer.h  Renderer2D.h  Renderer3D.h  RendererTypes.h  SceneRenderer.h  Shader.h  SpriteAtlas.h  Texture.h  Tilemap.h  UBData.h  UniformBuffer.h  VertexBuffer.h  VertexBufferLayout.h  VertexData.h  VertexInput.h
Boon/include/Scene/: BRef.h  GameObject.h  GameObjectID.h  Prefab.h  Scene.h  SceneManager.h  SceneSerializer.h
Boon/include/Serialization/: BinarySerializer.h
Boon/modules/BoonNetworking/: BoonModule.json
Boon/src/Asset/: AssetLibrary.cpp  AssetManifest.cpp  AssetRef.cpp  ShaderAsset.cpp  SpriteAtlasAsset.cpp  TextureAsset.cpp
Boon/src/BoonDebug/: Logger.cpp
Boon/src/Component/: BoxCollider2D.cpp  CameraComponent.cpp  Rigidbody2D.cpp  SceneComponent.cpp  SpriteAnimatorComponent.cpp  TransformComponent.cpp
Boon/src/Core/: AppStateMachine.cpp  Application.cpp  Assert.cpp  Command.cpp  DynamicLibrary.cpp  FileSystem.cpp  Random.cpp  ServiceLocator.cpp  Time.cpp  UUID.cpp  Window.cpp
Boon/src/Event/: EventBus.cpp
Boon/src/Input/: Input.cpp  InputEvents.h
Boon/src/Module/: ModuleLibrary.cpp  ModuleManifestLoader.cpp
Boon/src/Networking/: NetConnection.cpp  NetRPC.cpp  NetRepCore.cpp  NetRepRegistry.cpp  NetScene.cpp
Boon/src/Physics/: PhysicsWorld2D.cpp
Boon/src/Project/: ProjectLoader.cpp
Boon/src/Reflection/: BClass.cpp
Boon/src/Renderer/: Camera.cpp  Framebuffer.cpp  IndexBuffer.cpp  RenderAPI.cpp  RenderBatch.cpp  Renderer.cpp  Renderer2D.cpp  Renderer3D.cpp  SceneRenderer.cpp  Shader.cpp  Texture.cpp  Tilemap.cpp  UniformBuffer.cpp  VertexBuffer.cpp  VertexBufferLayout.cpp  VertexInput.cpp
Boon/src/Scene/: GameObject.cpp  Prefab.cpp  Scene.cpp  SceneManager.cpp  SceneSerializer.cpp
Boon/tools/BClassGenerator/: BoonReflection.cmake  CMakeLists.txt
Boon/tools/BoonBuild/: CMakeLists.txt
Boon/tools/Common/: CMakeLists.txt
Editor/: CMakeLists.txt
Editor/Assets/game/: decor_8x8.bsa
Editor/Assets/scenes/: Test.scene
Editor/Assets/shaders/: Line.glsl  Quad.glsl  Tilemap.glsl
Editor/Resources/Icons/: StopButton.png-autosave.kra
Editor/Resources/Templates/: NewProject.btemplate  PackagedRuntime.btemplate
Editor/include/Assets/: AssetDatabase.h  AssetDirectoryScanner.h
Editor/include/Command/: EditorCommand.h  EditorCommandQueue.h  PropertyCommand.h  SceneCommands.h
Editor/include/Core/: BoonEditor.h  EditorCamera.h  EditorContext.h  EditorLogSink.h  EditorObject.h  EditorState.h  ObjectContext.h
Editor/include/DebugRenderer/: DebugRenderLayers.h  DebugRenderer.h  EditorViewportSettings.h
Editor/include/Event/: EditorEvent.cpp  EditorEvent.h
Editor/include/Game/: PlayerController.h  PlayerSpawn.h
Editor/include/Packaging/: PackageBuildSettings.h  PackageBuilder.h  PackageCodeGenerator.h  PackageModule.h
Editor/include/Panels/: AssetEditor.h  AssetEditorPanel.h  ConsolePanel.h  ContentBrowser.h  EditorDialog.h  EditorPanel.h  EditorWidget.h  IViewportCanvasRenderer.h  MaterialEditorPanel.h  NetworkPanel.h  PropertiesPanel.h  ScenePanel.h  SpriteAtlasEditorPanel.h  TilemapEditorPanel.h  ViewportPanel.h  ViewportToolbar.h
Editor/include/Tools/: NewProjectDialog.h  PackageBuildDialog.h  ProjectGenerator.h  TemplateProcessor.h
Editor/include/UI/: DragDropRouter.h  EditorCanvas2D.h  EditorRenderer.h  UI.h
Editor/include/Utils/: ProcessRunner.h
Editor/src/Assets/: AssetDatabase.cpp  AssetDirectoryScanner.cpp
Editor/src/Command/: EditorCommandQueue.cpp
Editor/src/Core/: EditorCamera.cpp  EditorContext.cpp  EditorLogSink.cpp  EditorState.cpp  main.cpp
Runtime/: CMakeLists.txt
Sandbox/: CMakeLists.txt  Sandbox.bproj
Sandbox/include/: PlayerController.h  PlayerSpawn.h  SandboxAPI.h
Sandbox/src/: CameraController.cpp  PlayerController.cpp  SandboxModule.cpp
(+3027 files in other folders)
